# minecraft-enchanting-order-calculator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: windows-build.yml
docs/superpowers/specs/: 2026-06-13-minecraft-enchanting-order-calculator-design.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ItemIcon.tsx
src/data/: enchantments.test.ts  enchantments.ts  items.ts
src/domain/: anvil.test.ts  anvil.ts  format.ts  selection.ts  types.ts
